--- a/docs/docs/contributor/local-setup/wsl-setup.mdx
+++ b/docs/docs/contributor/local-setup/wsl-setup.mdx
@@ -1,7 +1,7 @@
 ---
 title: Windows WSL Setup
-sidebar_position: 3
-description: Install the project with WSL2.
+sidebar_position: 2
+description: Install the project with WSL2 (Windows)
 sidebar_custom_props:
   icon: TbBrandWindows
 ---
@@ -27,7 +27,7 @@ You will be prompted to create a username and password for your Ubuntu installat
 
 ## Setup your developer environment
 
-### Step #1: Install Git
+### Step 1: Install Git
 
 ```
 sudo apt-get install git
@@ -44,7 +44,7 @@ If you don't have a Github account, create one now with the corresponding email 
 
 :::
 
-### Step #2: Install Node.js, nvm, Yarn
+### Step 2: Install Node.js, nvm, Yarn
 
 ```bash
 sudo apt-get install curl
@@ -54,7 +54,7 @@ curl -o- -L https://yarnpkg.com/install.sh | bash
 
 Close and reopen your terminal to start using nvm. 
 
-### Step #3: Install Twenty
+### Step 3: Install Twenty
 
 Follow our [Yarn install guide](/contributor/local-setup/yarn-setup) to install Twenty.
 We don't recommend using Docker on WSL as it adds an extra layer of complexity.
