--- a/docs/docs/contributor/local-setup/ide-setup.mdx
+++ b/docs/docs/contributor/local-setup/ide-setup.mdx
@@ -1,7 +1,7 @@
 ---
 title: IDE Setup
 sidebar_position: 4
-description: Our recommended IDE set up. 
+description: Get the best developer UX with VSCode
 sidebar_custom_props:
   icon: TbBrandVscode
 ---
@@ -14,11 +14,11 @@ This section will help you set up your IDE for the project. If you haven't setup
 You can use any IDE you want but we recommend using Visual Studio Code as our internal team uses it and we have a lot of extensions and settings that we can share with you.
 
 
-### Installation
+### Step 1: Installation
 
 You can download Visual Studio Code from [here](https://code.visualstudio.com/download). Depending on your operating system, you can download the appropriate version.
 
-### Open Project
+### Step 2: Open Project
 
 Once you have installed Visual Studio Code, you can open the project by clicking on `File > Open Folder` and selecting `twenty` project root folder.
 
@@ -26,7 +26,7 @@ Once you have installed Visual Studio Code, you can open the project by clicking
     <img src="/img/contributor/ide-project-open.png" alt="Visual Studio Code: Open Twenty project" width="90%" />
 </div>
 
-### Extensions 
+### Step 3: Extensions 
 
 You can use the recommended extensions for the project. You will find them in `.vscode/extensions.json` file. VSCode should prompt you to install the recommended extensions when you open the project.
 
@@ -35,7 +35,7 @@ You can use the recommended extensions for the project. You will find them in `.
 </div>
 
 
-### Docker Setup
+### Step 4: (Docker only) Run VSCode in container
 
 If you are using a [Docker setup](/contributor/local-setup/docker-setup), you will need to run VSCode in the container. You can do that by opening the project, clicking on the `Remote Explorer` icon on the left sidebar and then clicking on `Attach in New window` on `dev-twenty-dev` container.
 
@@ -49,6 +49,6 @@ VSCode will open a new window and you will be able to use it as you would normal
 <br /><br />
 If you stop your containers, you will need to restart them before opening the project in VSCode again.
 
-## Conclusion
+## You are all set
 
 You are all set to start contributing to the project. If you have any questions, feel free to reach out to us on [Discord](https://twenty.com/discord).
