Refactored Storybook UI (#2020)
* refactored Storybook UI

* refactored Storybook UI

* removed extra cards from the doc, added card for ui components

--- a/docs/docs/contributor/frontend/basics/contributing.mdx
+++ b/docs/docs/contributor/frontend/basics/contributing.mdx
@@ -1,12 +1,10 @@
 ---
 title: Contributing
 sidebar_position: 1
+description: Learn how you can contribute to the project
 sidebar_custom_props:
   icon: TbTopologyStar
 ---
-import DocCardList from '@theme/DocCardList';
-
-<DocCardList />
 
 ## Pre-requesites
 
