--- a/docs/docs/contributor/local-setup/docker-setup.mdx
+++ b/docs/docs/contributor/local-setup/docker-setup.mdx
@@ -98,7 +98,7 @@ make server-database-reset
 
 ## Step 5: Start Twenty
 
-Run the project with the following commands from the `root folder`:
+Run the project with the following commands from the `root` folder:
 
 ```bash
 make server-start
@@ -113,7 +113,7 @@ You should now have:
 - **Server** available on: [http://localhost:3000/graphql](http://localhost:3000/graphql)
 - **Postgres** available on [http://localhost:5432](http://localhost:5432) and containing database named `default`
 
-Sign in using our seeded demo account `tim@apple.dev` (password: `Applecar2025`) to start using Twenty
+Sign in using our seeded demo account `tim@apple.dev` (password: `Applecar2025`) to start using Twenty.
 
 ### Optional
 
