--- a/docs/docs/contributor/frontend/basics/design-system.mdx
+++ b/docs/docs/contributor/frontend/basics/design-system.mdx
@@ -1,15 +1,10 @@
 ---
 title: Design System
+description: What our design system looks like
 sidebar_position: 7
 sidebar_custom_props:
   icon: TbPaint
 ---
-
-import DocCardList from '@theme/DocCardList';
-
-<DocCardList />
-
-# Design System
 
 We rely on our internal and custom design system, that is built on top of styled-components.
 
