--- a/docs/docs/contributor/frontend/basics/folder-architecture.mdx
+++ b/docs/docs/contributor/frontend/basics/folder-architecture.mdx
@@ -1,15 +1,10 @@
 ---
 title: Folder Architecture
 sidebar_position: 5
+description: A detailed look into our folder architecture
 sidebar_custom_props:
   icon: TbFolder
 ---
-
-import DocCardList from '@theme/DocCardList';
-
-<DocCardList />
-
-# Folder Architecture
 
 In this guide, you will explore the details of the project directory structure and how it contributes to the organization and maintainability of Twenty.
 
