--- a/docs/docs/contributor/frontend/basics/work-with-figma.mdx
+++ b/docs/docs/contributor/frontend/basics/work-with-figma.mdx
@@ -1,13 +1,10 @@
 ---
 title: Work with Figma
+description: Learn how you can collaborate with Twenty's Figma
 sidebar_position: 2
 sidebar_custom_props:
   icon: TbBrandFigma
 ---
-
-import DocCardList from '@theme/DocCardList';
-
-<DocCardList />
 
 Figma is a collaborative interface design tool that aids in bridging the communication barrier between designers and developers.
 In this guide, we'll go over how to collaborate with Twenty’s Figma.
