--- a/docs/docs/contributor/frontend/ui-components/ui-components.mdx
+++ b/docs/docs/contributor/frontend/ui-components/ui-components.mdx
@@ -4,5 +4,6 @@ sidebar_position: 0
 sidebar_custom_props:
   icon: TbBrandFigma
 ---
+import DocCardList from '@theme/DocCardList';
 
-WIP
+<DocCardList />
