Complete win script setup

--- a/docs/docs/contributor/frontend/basics/folder-architecture.mdx
+++ b/docs/docs/contributor/frontend/basics/folder-architecture.mdx
@@ -6,6 +6,8 @@ sidebar_custom_props:
   icon: TbFolder
 ---
 
+# Folder Architecture
+
 In this guide, you will explore the details of the project directory structure and how it contributes to the organization and maintainability of Twenty.
 
 By following this folder architecture convention, it is easier to find the files related to specific features and ensure that the application is scalable and maintainable.
