--- a/docs/docs/contributor/local-setup/yarn-setup.mdx
+++ b/docs/docs/contributor/local-setup/yarn-setup.mdx
@@ -89,7 +89,7 @@ You can access them using `twenty` postgres user (password: `twenty`)
 We recommend to provision your database locally:
 ```bash
 cd twenty
-./infra/dev/scripts/setup-database.sh
+bash ./infra/dev/scripts/setup-database.sh
 ```
 This will create a Docker container, exposing a PostgresSQL instance at [http://localhost:5432](http://localhost:5432).
 You can access them using `twenty` postgres user (password: `twenty`)
