feat: easier makefile commands (#2077)
* feat: easier makefile commands

* fix: cleaner command

--- a/docs/docs/contributor/local-setup/docker-setup.mdx
+++ b/docs/docs/contributor/local-setup/docker-setup.mdx
@@ -90,10 +90,9 @@ Start the containers:
 make up
 ```
 
-Run database migrations, generate prisma client, and seed:
+Setup database, generate prisma client, run migrations, and seed:
 ```bash
-make server-database-setup
-make server-database-reset
+make server-database-init
 ```
 
 ## Step 5: Start Twenty
