apply database:init (#2079)

--- a/docs/docs/contributor/local-setup/yarn-setup.mdx
+++ b/docs/docs/contributor/local-setup/yarn-setup.mdx
@@ -131,8 +131,7 @@ cd server
 nvm install #recommended
 nvm use #recommended 
 yarn
-yarn database:setup
-yarn database:reset
+yarn database:init
 yarn start:dev
 ```
 
