--- a/docs/docs/contributor/frontend/basics/basics.mdx
+++ b/docs/docs/contributor/frontend/basics/basics.mdx
@@ -1,6 +1,5 @@
 ---
 title: Basics
-# description: Overview
 sidebar_position: 0
 sidebar_custom_props:
   icon: TbEyeglass
@@ -45,7 +44,7 @@ To avoid unnecessary [re-renders](/contributor/frontend/advanced/best-practices#
 
 We use [Recoil](https://recoiljs.org/docs/introduction/core-concepts) for state management.
 
-See our [best practices](/contributor/frontend/advanced/best-practices#state-management) for more managing state.
+See our [best practices](/contributor/frontend/advanced/best-practices#state-management) for more information on state management.
 
 ## Testing
 
