--- a/docs/docs/contributor/frontend/basics/folder-architecture.mdx
+++ b/docs/docs/contributor/frontend/basics/folder-architecture.mdx
@@ -17,7 +17,10 @@ front
 │   │   └───submodule1
 │   └───module2
 │   └───ui
-│   │   └───buttons
+│   │   └───display
+│   │   └───inputs
+│   │   │   └───buttons
+│   │   └───...
 └───pages
 └───...
 ```
@@ -29,7 +32,7 @@ Contains the top-level components that are defined by the application routes. Th
 ## Modules
 
 Each module represents a feature or a group of feature, comprising its specific components, states, and operational logic.
-They should all follow the structure below. You can nest modules within modules; We often refer to them as submodules but the same rules apply.
+They should all follow the structure below. You can nest modules within modules; we often refer to them as submodules but the same rules apply.
 
 ```
 module1
@@ -55,7 +58,7 @@ module1
 
 A context is a way to pass data through the component tree without having to pass props down manually at every level.
 
-See [React Context](https://react.dev/reference/react#context-hooks) for more details
+See [React Context](https://react.dev/reference/react#context-hooks) for more details.
 
 ### GraphQL
 
@@ -100,7 +103,7 @@ Should only contain reusable pure functions. Otherwise, create custom hooks in t
 
 Contains all of the reusable UI components used in the application.
 
-This folder can contain subfolders for specific types of components, such as `buttons`, `inputs`, or `modals`. Each component should be self-contained and reusable, so that it can be used in multiple parts of the application.
+This folder can contain subfolders, like `data`, `display`, `feedback`, and `input` for specific types of components. Each component should be self-contained and reusable, so that it can be used in multiple parts of the application.
 
 By separating the UI components from the other components in the `modules` folder, it is easier to maintain a consistent design and to make changes to the UI without affecting other parts (business logic) of the codebase.
 
