--- a/docs/docs/contributor/frontend/basics/work-with-figma.mdx
+++ b/docs/docs/contributor/frontend/basics/work-with-figma.mdx
@@ -11,10 +11,16 @@ In this guide, we'll go over how to collaborate with Twenty’s Figma.
 
 ## Access
 
-1. **Access the shared link:** you can access the Twenty Figma file with this link: https://www.figma.com/file/xt8O9mFeLl46C5InWwoMrN/Twenty
+1. **Access the shared link:** You can access the Twenty Figma file [here](https://www.figma.com/file/xt8O9mFeLl46C5InWwoMrN/Twenty).
 2. **Sign in:** If you're not already signed in to Figma, you'll be prompted to do so. 
 Key features are only available to logged-in users, such as the developer mode and the ability to select a dedicated frame.
-**You will not be able to collaborate effectively without an account.**
+
+:::caution Note
+
+You will not be able to collaborate effectively without an account.
+
+:::
+
 
 ## Figma structure
 
@@ -30,18 +36,18 @@ With read-only access, you can't edit the design but you can access all features
 
 ### Use the Dev mode
 
-Figma's Dev Mode enhances developers' productivity by providing easy design navigation, effective asset management, efficient communication tools, toolbox integrations, quick code snippets, and key layer information, bridging the gap between design and development. Learn more at https://www.figma.com/dev-mode/
+Figma's Dev Mode enhances developers' productivity by providing easy design navigation, effective asset management, efficient communication tools, toolbox integrations, quick code snippets, and key layer information, bridging the gap between design and development. You can learn more about Dev Mode [here](https://www.figma.com/dev-mode/).
 
 Switch to the "Developer" mode in the right part of the toolbar to see design specs, copy CSS, and access assets. 
 
 ### Use the Prototype
 
-Click on any element on the canvas and press the “Play” button at the top right edge of the interface to access the prototype view.  Prototype mode allows you to interact with the design as if it were the final product. It demonstrates the flow between screens and how interface elements like buttons, links, or menus behave when interacted with.
+Click on any element on the canvas and press the “Play” button at the top right edge of the interface to access the prototype view. Prototype mode allows you to interact with the design as if it were the final product. It demonstrates the flow between screens and how interface elements like buttons, links, or menus behave when interacted with.
 
 1. **Understanding transitions and animations:** In the Prototype mode, any transitions or animations added by a designer between screens or UI elements can be viewed, providing clear visual instructions to developers on the intended behavior and style.
-2. **Implementation Clarification:** A prototype can also be used to reduce ambiguities. Developers can interact with it to gain a better understanding of the functionality or appearance of particular elements.
+2. **Implementation clarification:** A prototype can also be used to reduce ambiguities. Developers can interact with it to gain a better understanding of the functionality or appearance of particular elements.
 
-For more comprehensive details and guidance on learning the Figma platform, you can visit the official [Figma Documentation](https://help.figma.com/hc/en-us)
+For more comprehensive details and guidance on learning the Figma platform, you can visit the official [Figma Documentation](https://help.figma.com/hc/en-us).
 
 ### Measure distances
 
