--- a/docs/docs/contributor/local-setup/docker-setup.mdx
+++ b/docs/docs/contributor/local-setup/docker-setup.mdx
@@ -27,9 +27,13 @@ You can run `docker --version` to verify the installation.
 
 ## Step 1: Git Clone
 
-In your terminal, run the following command. 
+In your terminal, run the following command:
+
+:::info Note
 
 We recommend using SSH for this step. If you already haven't set up SSH keys, please do so first. You can learn more about it [here](https://docs.github.com/en/authentication/connecting-to-github-with-ssh/about-ssh). 
+
+:::
 
 <Tabs>
 <TabItem value="ssh" label="SSH (Recommended)" default>
