--- a/docs/docs/contributor/local-setup/local-setup.mdx
+++ b/docs/docs/contributor/local-setup/local-setup.mdx
@@ -41,7 +41,7 @@ twenty
 
 ## IDE Setup
 
-Once Twnenty is running on your computer, you will get the best experience by using an IDE that supports TypeScript and ESLint.
+Once Twenty is running on your computer, you will get the best experience by using an IDE that supports TypeScript and ESLint.
 You will find a guide for [VSCode](/contributor/local-setup/ide-setup) further in the documentation.
 ___
 
