--- a/docs/docs/contributor/local-setup/troubleshooting.mdx
+++ b/docs/docs/contributor/local-setup/troubleshooting.mdx
@@ -9,7 +9,7 @@ sidebar_custom_props:
 
 ## CR line breaks found [Windows]
 
-This is due to the linebreak characters of windows and the git configuration. Try running:
+This is due to the linebreak characters of Windows and the git configuration. Try running:
 ```
 git config --global core.autocrlf false
 ```
@@ -26,5 +26,5 @@ Try installing [yarn classic](https://classic.yarnpkg.com/lang/en/)!
 During Twenty installation, your postgres database needs to be provisioned with right schemas, extensions and users.
 We provide [different ways](/contributor/local-setup/yarn-setup#step-2-set-up-postgresql-database) to set up your postgres instance.
 
-If you sucessfully run this provisioning, you should have a `default` and a `metadata` schemas in your database.
+If you sucessfully run this provisioning, you should have `default` and `metadata` schemas in your database.
 If you don't, make sure you don't have multiple postgres instance running on your computer.
