--- a/docs/docs/hosting/self-hosting.mdx
+++ b/docs/docs/hosting/self-hosting.mdx
@@ -4,9 +4,7 @@ sidebar_custom_props:
   icon: TbServer
 ---
 Right now, Docker containers are the only hosting option we support. However, we are actively working on providing simple options to self-host Twenty. 
-Feel free to open issues on [Github](https://github.com/twentyhq/twenty/issues) if you want a specific cloud provider to be supported.
-
-Refer to this list to see what future options will be available.
+Feel free to open issues on [Github](https://github.com/twentyhq/twenty/issues/new) if you want a specific cloud provider to be supported.
 
 ## Production docker containers
 
@@ -25,7 +23,7 @@ docker build \
 
 ### Server
 
-:::note
+:::info Note
 
 To run the server, you will need to set the environment variables listed [here](https://github.com/twentyhq/twenty/blob/main/server/.env.example).
 
