--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -1,7 +1,6 @@
 ---
 id: homepage
 sidebar_position: 0
-
 sidebar_class_name: display-none
 title: Welcome
 custom_edit_url: null
@@ -32,7 +31,7 @@ See our [Getting Started](./start/getting-started/) guide to learn more.
 
 ## Contributing
 Contributions are what makes the open source community such an amazing place.  
-Code contributions through pull request are most welcome.
+Code contributions through pull requests are most welcome.
 But it doesn't have to be code. You can also create an issue to report a bug you've spotted, join discussions or write documentation.
 
 
