--- a/docs/docs/contributor/frontend/basics/contributing.mdx
+++ b/docs/docs/contributor/frontend/basics/contributing.mdx
@@ -6,7 +6,7 @@ sidebar_custom_props:
   icon: TbTopologyStar
 ---
 
-## Pre-requesites
+## Pre-requisites
 
 Make sure that your [IDE is correctly setup](/contributor/local-setup/ide-setup) and that your backend is running on `localhost:3000`.
 
