--- a/docs/docs/contributor/server/server.mdx
+++ b/docs/docs/contributor/server/server.mdx
@@ -3,7 +3,7 @@ title: Backend Development
 displayed_sidebar: backendSidebar
 sidebar_position: 0
 sidebar_custom_props:
-  icon: TbTerminal2
+  icon: TbTerminal
   isSidebarRoot: true
 ---
 
